added primary color to each article

--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -23,9 +23,9 @@
 	
 			<nav class="nav-container">
 				<a href="../index.html" class="nav-item">home</a>
-				<a href="article-1.html" class="nav-item">Article 1</a>
-				<a href="article-2.html" class="nav-item">Article 2</a>
-				<a href="article-3.html" class="nav-item">Article 3</a>
+				<a href="article-1.html" class="nav-item">01</a>
+				<a href="article-2.html" class="nav-item">02</a>
+				<a href="article-3.html" class="nav-item">03</a>
 			</nav>
 		</header>
 		
@@ -61,36 +61,41 @@
 			<section>
 				<div id="intro">
 					<p>Welcome to Noticed, The Goods’ design trend column. You know that thing you’ve been seeing all over the place? Allow us to explain it.</p>
+
+					<p><span class="bold-text">What it is:
+					</span> A digital or print effect where one color fades into another. Typically rendered in soft or pastel tones.</p>
+
+					<p><span class="bold-text">Where it is:
+					</span> Gradients are seemingly everywhere in media and marketing. 
 				</div>
 			
 				<div class="sticky-header" id="section1">
 					<h2>The rise of Gradients</h2>
 				</div>
 
-				<p><strong>What it is:</strong> A digital or print effect where one color fades into another. Typically rendered in soft or pastel tones.</p>
-
 				<blockquote class="quotes">
-					<p><strong>Where it is:</strong> <span class="emphasis-word"> Gradients </span> are seemingly everywhere in media and marketing. They are part of a suite of Facebook status backdrops introduced in 2017 and the branding for the New York Times’ popular podcast The Daily, which displays a yellow to blue gradient.</p>
+					<p>They are part of a suite of Facebook status backdrops introduced in 2017 and the branding for the New York Times’ popular podcast The Daily, which displays a yellow to blue gradient.</p>
 
-					<p> <span class="emphasis-word">Gradients </span> have taken over Coachella’s app and website (if you watch carefully, the colors shift). Ally’s billboard in A Star Is Born is a full-on gradient, and so was the branding for the Oscars ceremony that recognized Lady Gaga.</p>
+					<p><span class="emphasis-word">Gradients </span> have taken over Coachella’s app and website (if you watch carefully, the colors shift). Ally’s billboard in A Star Is Born is a full-on gradient, and so was the branding for the Oscars ceremony that recognized Lady Gaga.</p>
 				</blockquote>
 
-				<div class="sticky-header" id="section2"></div>
+				<div class="sticky-header" id="section2">
 					<h2>What is GRADIENTS</h2>
 				</div>
 
-		
 				<p>On Instagram, they provide a product backdrop for popular Korean beauty brand Glow, and have been embraced by indie magazines Gossamer and Anxy — both designed by Berkeley studio Anagraph.
 				</p>
 
 				<p>On the luxury front, Brooklyn wallpaper company Calico has released an entire collection of gradient wallpapers called Aurora. Meanwhile, Spanish fashion house Loewe has introduced a version of their trendy Elephant bag in a spectrum of pink to yellow.
 				</p>
 
-				<p>Are <span class="emphasis-word">gradients </span>drinkable? Heck yes, they are. Seltzer startup Recess has gone all-in on gradients in their branding.</p>
+				<blockquote class="quotes">
+					<p>Are gradients drinkable? Heck yes, they are. Seltzer startup Recess has gone all-in on gradients in their branding.</p>
+				</blockquote>
 
 				<p><strong>Why you’re seeing it everywhere:</strong> <span class="emphasis-word">Gradients</span> are the confluence of three different trends: Light and Space art, vaporwave, and bisexual lighting.</p>
 
-				<div class="sticky-header" id="section3"></div>
+				<div class="sticky-header" id="section3">
 					<h2>Gradients in Art & Design</h2>
 				</div>
 
