--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -23,9 +23,9 @@
 
 		<nav class="nav-container">
 			<a href="../index.html" class="nav-item">home</a>
-			<a href="article-1.html" class="nav-item">Article 1</a>
-			<a href="article-2.html" class="nav-item">Article 2</a>
-			<a href="article-3.html" class="nav-item">Article 3</a>
+			<a href="article-1.html" class="nav-item">01</a>
+			<a href="article-2.html" class="nav-item">02</a>
+			<a href="article-3.html" class="nav-item">03</a>
 		</nav>
 	</header>
 
@@ -64,14 +64,14 @@
 			<section>
 				<div class="intro">
 					<em>I gave this talk at RISD in Providence and UXLx in Lisbon. Thanks to Tim Maly and Bruno Figueiredo for inviting me to speak, and to Allen Tan, Tina Lee, and Max Fenton for their thoughtful feedback on drafts.</em>	
-				</div>
-		
-				<p>I want to start with a quote from writer, activist, and teacher, Thich Nhat Hanh. In Being Peace, he writes:</p>
+			
+					<p>I want to start with a quote from writer, activist, and teacher, Thich Nhat Hanh. In Being Peace, he writes:</p>
 
-			<blockquote class="quotes">
-				<p> “If you are a poet, you will see clearly that there is a cloud floating in every sheet of paper. Without a cloud, there will be no rain; without rain, the trees cannot grow; and without trees, we cannot make paper. The cloud is essential for the paper to exist.”
-				</p>
-			</blockquote>
+				<blockquote class="quotes">
+					<p> “If you are a poet, you will see clearly that there is a cloud floating in every sheet of paper. Without a cloud, there will be no rain; without rain, the trees cannot grow; and without trees, we cannot make paper. The cloud is essential for the paper to exist.”
+					</p>
+				</blockquote>
+			</div>
 	
 			<p>Thich Nhat Hanh calls this concept interbeing. He goes on to say that the sun is also in the sheet of paper; and the lumberjack who cut down the tree; and his parents; and the wheat that made his morning bread; and so on. All of these things make it possible for the paper to exist.</p>
 
