styling homepage again

--- a/index.html
+++ b/index.html
@@ -3,27 +3,24 @@
 	<head>
 		<title>Project 3-Binding</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<link href="../Stylesheets/reset.css" rel="stylesheet">
-		<link href="Stylesheets/homepage.css" rel="stylesheet">
+	<!-- stylesheets -->
+	<link href="../Stylesheets/reset.css" rel="stylesheet">
+	<link rel="stylesheet" href="../Stylesheets/homepage.css">
+</head>
 	</head>
 
 <!-- [Landing page]  --> 
 	<body>
-		<!-- navbar -->
-		 <nav> 
-			<div class="left-nav">
-				<a href="index.html">Home</a>
+		<header>
+			<!-- nav bar -->
+			<div class="header">
+				<span class="class-name">T&I</span>
+				<span class="project">Article 01</span>
+				<span class="my-name">V.M</span>
 			</div>
 
-			<ul class="right-nav"> 
-				<li>Readings list
-			</ul>
-		</nav>
-
-		<header>
+			<!-- title -->
 			<h1>Binding</h1>
-
 			<p class="intro"> This collection, created by Vee Mai, delves into the emotional resonance of design—exploring how feelings, color, and word choices shape user experiences in the digital product era. Through these articles, we uncover how gradients and carefully chosen words can provide meaningful and impactful interactions</p>
 		</header>
 		
@@ -31,7 +28,7 @@
 		<section>
 			<h2>Explore these articles below! </h2>
 			<ol class="cardlink-container">
-				<a href="Pages/article-1.html"> 
+				<a href="Pages/article-1.html" id="card1"> 
 					<li class="cardlink">
 						<div class="cardlink-item1">
 							<h2>01</h2>
@@ -40,7 +37,8 @@
 							<h2>Hooked on a Feeling</h2>
 						</div>
 						<div>
-							<h2 class="author">Michael Rock</h2>
+							<h2 class="author">Michael Rock
+							</h2>
 						</div>
 					</li>
 				</a>
@@ -54,11 +52,10 @@
 							<h2>Gradients</h2>
 						</div>
 						<div>
-							<h2 class="author"> Daisy</h2>
+							<h2 class="author"> Daisy Alioto </h2>
 						</div>
 					</li>
 				</a>
-
 
 				<a href="Pages/article-3.html">
 					<li class="cardlink">
@@ -69,19 +66,23 @@
 							<h2>Words as Material</h2>
 						</div>
 						<div>
-							<p>Nicole Fenton</p>
+							<h2>Nicole Fenton</h2>
 						</div>
 					</li>
 				</a>
 			</ol>
 		</section> 
 		
-		<section>
+		<section id="colophon">
 			<h3>Colophon</h3>
-
-			<p></p>
+			<p>
+				Lorem ipsem Lorem ipsem Lorem ipsem Lorem ipsem Lorem ipsemLorem ipsem Lorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsem
+			</p>
+			<p>
+				Lorem ipsem Lorem ipsem Lorem ipsem Lorem ipsem Lorem ipsemLorem ipsem Lorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsem
+			</p>
 		</section>
-
+		
 		<footer>
 			<p>Designed by Vee Mai</p>
 		</footer>
