Created new title style for article 1
changed color on article 1

--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -14,15 +14,25 @@
 	<body>
 		<header>
 			<div class="header">
-				<span class="class-name">T&I</span>
-				<span class="project">Article 01</span>
-				<span class="my-name">V.M</span>
+				<span class="short-text">T&I</span>
+				<span class="full-text">Typography & Interaction</span>
+				<span class="short-text">01</span>
+				<span class="full-text" id="strike">Article 01</span>
+				<span class="short-text">VM</span>
+				<span class="full-text">Vee Mai</span>
+	
 			</div>
 	
 			<h1>Hooked on a <span id="hover-title">Feeling</span></h1>
+
+			<div id="intro">
+				<h5> 
+					We designers love to fashion ourselves as <span class="highlighted-text">“problem solvers,”</span> but let’s face it: the line between solving problems and creating them is blurry at best. <span class="big-text"> What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganzain the Bois de Boulogne?</span>
+				</h5> 
+			</div>
 	
 			<nav class="nav-container">
-				<a href="../index.html" class="nav-item">Home</a>
+				<a href="index.html" class="nav-item">Home</a>
 				<a href="article-1.html" class="nav-item">01</a>
 				<a href="article-2.html" class="nav-item">02</a>
 				<a href="article-3.html" class="nav-item">03</a>
@@ -30,7 +40,7 @@
 		</header>
 
 		<div class="grid"> 	
-		<!-- aside -->
+		<!-- table of content -->
 			<aside>
 					<div class="sticky-aside">
 							<div class="article-info">
@@ -53,36 +63,37 @@
 									<h4><a href="#section3">Emotional Connection</a></h4>
 								</h4>
 							</div>
-						</div>
+					</div>
 			</aside>
-			
+
+		<!-- article -->
 			<article>
 				<section>
-					<div id="intro">
-						<p> We designers love to fashion ourselves as <em>“problem solvers,”</em> but let’s face it: the line between solving problems and creating them is blurry at best.What problem is being solved by a $1,500 pair of heels, or a $150,000 car, or a $150,000,000 architectural extravaganza in the Bois de Boulogne? The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other.
-						</p> 
-					</div>
+					<div id="main-title">Hooked on a Feeling </div>
 
 					<div class="sticky-header" id="section1">
+						<div class="empty-sticky">
+							<div></div>
+						</div>
 							<h2>Emotional > Functional </h2>
 					</div>
-			
-
+					<p>
+						The truth is, no matter what designers say, we have never simply answered problems. The act of design vacillates between the functional and the beguiling, often performing one while claiming the other.</p>
 					<p>
 						Le Corbusier dismissed the architecture of his beaux-arts contemporaries as cloying, while he looked longingly to the brutal utility of the grain elevators and factories devised by American engineers. A half century later, Rem Koolhaas jettisoned function in favor of performance: 
 					</p>
 
-					<blockquote class="quotes">
-						<p><q>
+					<blockquote class="big-quotes">
+						<p>
 							Functionality is boring; performance is about what role the building plays and what kind of scene it triggers.
 						</p>
-						<p class="remKoolhaas">
-							<cite><strong>— Rem Koolhaas</strong></cite> 
+						<p>
+							<cite> — Rem Koolhaas</cite> 
 						</p>
 					</blockquote>
 
 					<p>
-						There has long been an ideological divide between the utilitarian and the emotional, between rational design and the decorative arts, but the balance of power is shifting: In the battle between the head and the gut, the gut’s now cleaning up.
+						There has long been an ideological divide between the utilitarian and the emotional, between rational design and the decorative arts, but the balance of power is shifting: In the <span class="highlighted-text"> battle between the head and the gut,</span> the gut’s now cleaning up.
 					</p>
 
 					<div class="sticky-header" id="section2">
@@ -90,17 +101,17 @@
 					</div>
 
 					<p>
-						The empathy economy is booming. Facts are out, feelings are in. This is attributed, at least in part, to a kind of brand-mania that asserts that everything from your razor blade to your public library to the IRS needs to have a relatable personality. Everyone is in the business of brand management: artists, designers, businesses, celebrities, politicians, museums, universities, armies, nations. (Is it only a matter of time before we’re debating our intergalactic positioning?) 
+						<span class="highlighted-text"> The empathy economy is booming. Facts are out, feelings are in. </span>This is attributed, at least in part, to a kind of brand-mania that asserts that everything from your razor blade to your public library to the IRS needs to have a relatable personality. Everyone is in the business of brand management: artists, designers, businesses, celebrities, politicians, museums, universities, armies, nations. (Is it only a matter of time before we’re debating our intergalactic positioning?) 
 					</p>
 					
-					<blockquote class="big-quote">
+					<blockquote class="bigger-quote">
 						</p>
 							Branding is supposedly not about what something says, or what it means, but how it makes us feel. 	
 						</p>
 					</blockquote>
 
 					<p>
-						A brand is a promise. It’s the putative guarantee of the emotional payoff on an investment in a particular product, place, or individual. So the new handbag makes us feel chic and knowing; the laptop, savvy and contemporary; the vodka, suave and sophisticated; the museum, refined and sensitive. When we talk about a strong brand, what we mean is that it consistently delivers the emotion it promises.
+						<span class="highlighted-text"> A brand is a promise.</span> It’s the putative guarantee of the emotional payoff on an investment in a particular product, place, or individual. So the new handbag makes us feel chic and knowing; the laptop, savvy and contemporary; the vodka, suave and sophisticated; the museum, refined and sensitive. When we talk about a strong brand, what we mean is that it consistently delivers the emotion it promises.
 					</p>
 						
 					<p>
