--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 		<section>
 			<h2>Explore these articles below! </h2>
 			<ol class="cardlink-container">
-				<a href="Pages/article-1.html" id="card1"> 
-					<li class="cardlink">
+	
+				<a href="Pages/article-1.html">
+					<li class="cardlink" id="card1">
 						<div class="cardlink-item1">
 							<h2>01</h2>
 						</div>
@@ -42,9 +43,10 @@
 						</div>
 					</li>
 				</a>
+			
 
 				<a href="Pages/article-2.html">
-					<li class="cardlink">
+					<li class="cardlink" id="card2">
 						<div class="cardlink-item1">
 							<h2>02</h2>
 						</div>
@@ -58,7 +60,7 @@
 				</a>
 
 				<a href="Pages/article-3.html">
-					<li class="cardlink">
+					<li class="cardlink" id="card3">
 						<div class="cardlink-item1">
 							<h2>03</h2>
 						</div>
