--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -150,7 +150,7 @@
 					</p>
 
 					<p>
-						While the ascendency of mood boarding reflects the way brands, from commercial products to people, are imagined at this moment, the question remains why we are all so susceptible to manufactured emotion. Why are we so needy? Perhaps this yearning is a reaction to the lurking presence of Big Data. As vast files of meta-data and personal search histories are ferreted away in some server farm in god-knows-where, we crave the kind of anodyne, gauzy experiences that at least promise something warmer and more human. When everything is available all the time and we’re inundated with information in every way, shape and form, we’re left no choice but to favor what makes us feel.
+						While the ascendency of mood boarding reflects the way brands, from commercial products to people, are imagined at this moment, the question remains why we are all so susceptible to manufactured emotion. Why are we so needy? Perhaps this yearning is a reaction to the lurking presence of Big Data. As vast files of meta-data and personal search histories are ferreted away in some server farm in god-knows-where, we crave the kind of anodyne, gauzy experiences that at least promise something warmer and more human. When everything is available all the time and we’re inundated with information in every way, shape and form, we’re left no choice but to <span class="highlighted-text"> favor what makes us feel.</span>
 					</p>
 				</section>
 			</article>
