started applying new styling to article 02

--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -14,12 +14,17 @@
 	<body>
 		<header>
 			<div class="header">
-				<span class="class-name">T & I</span>
-				<span class="project">Article 03</span>
-				<span class="my-name">Vee Mai</span>
+				<span class="short-text">T&I</span>
+				<span class="full-text">Typography & Interaction</span>
+				<span class="short-text">01</span>
+				<span class="full-text" id="strike">Article 01</span>
+				<span class="short-text">VM</span>
+				<span class="full-text">Vee Mai</span>
 			</div>
 	
-			<h1><span id="hover-title">Gradients:</span> the colorful design trend aiming to soothe these anxious times</h1>
+			<h1><span id="hover-title">Gradients</span> </h1>
+			
+				<!-- the colorful design trend aiming to soothe these anxious times -->
 	
 			<nav class="nav-container">
 				<a href="../index.html" class="nav-item">home</a>
