organizing common css and bringing in new article 01 css to article 02 css

--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -16,15 +16,16 @@
 			<div class="header">
 				<span class="short-text">T&I</span>
 				<span class="full-text">Typography & Interaction</span>
-				<span class="short-text">01</span>
-				<span class="full-text" id="strike">Article 01</span>
+				<span class="short-text">02</span>
+				<span class="full-text" id="strike">Colors</span>
 				<span class="short-text">VM</span>
-				<span class="full-text">Vee Mai</span>
+				<span class="full-text">Designed by Vee Mai</span>
 			</div>
 	
-			<h1><span id="hover-title">Gradients</span> </h1>
-			
-				<!-- the colorful design trend aiming to soothe these anxious times -->
+			<h1>Gradients</h1>
+
+			<div id="intro">
+					<h5>Welcome to Noticed, The Goods’ design trend column. You know that thing you’ve been seeing all over the place? Allow us to explain it.</h5>
 	
 			<nav class="nav-container">
 				<a href="../index.html" class="nav-item">home</a>
@@ -35,14 +36,14 @@
 		</header>
 		
 		<div class="grid"> 	
-			<!-- aside -->
-				<aside>
-						<div class="sticky-aside">
-							<div class="article-info">
-								<div class="article-author">
+		<!-- table of content -->
+			<aside>
+				<div class="sticky-aside">
+					<div class="article-info">
+							<div class="article-author">
 								<h3 id="written-by">Written by </h3>
 								<h3 id="author-name"><a href="https://www.nicolefenton.com/"> Daisy Alioto</a></h3>
-						</div>
+							</div>	
 	
 						<div class="original-text">
 							<h3 id="duration">10 min read </h3>
@@ -50,35 +51,36 @@
 						</div>
 					</div>
 
-						<div class="table_of_content">
-							<h4 id="content">Table of Contents
-								<h4><a href="#section1">The Rise of GRADIENTS </a></h4>
-								<h4><a href="#section2">Empathy Economy</a></h4>
-								<h4><a href="#section3">Mood Board Revolution</a></h4>
-								<h4><a href="#section3">Emotional Connection</a></h4>
-							</h4>
-						</div>
+					<div class="table_of_content">
+						<h4 id="content">Table of Contents
+							<h4><a href="#section1">The Rise of GRADIENTS </a></h4>
+							<h4><a href="#section2">Empathy Economy</a></h4>
+							<h4><a href="#section3">Mood Board Revolution</a></h4>
+							<h4><a href="#section3">Emotional Connection</a></h4>
+						</h4>
 					</div>
-				</aside>
+				</div>
+			</aside>
 		
 
+		<!-- article -->
 		<article>
 			<section>
-				<div id="intro">
-					<p>Welcome to Noticed, The Goods’ design trend column. You know that thing you’ve been seeing all over the place? Allow us to explain it.</p>
-
-					<p><span class="bold-text">What it is:
-					</span> A digital or print effect where one color fades into another. Typically rendered in soft or pastel tones.</p>
-
-					<p><span class="bold-text">Where it is:
-					</span> Gradients are seemingly everywhere in media and marketing. 
+				<div id="main-title">Gradients: the colorful design trend aiming to soothe these anxious times 
 				</div>
-			
-				<div class="sticky-header" id="section1">
+				
+				<div class="sticky-header" id="section1"></div>
 					<h2>The rise of Gradients</h2>
 				</div>
 
-				<blockquote class="quotes">
+				<p><span class="bold-text">What it is:
+				</span> A digital or print effect where one color fades into another. Typically rendered in soft or pastel tones.</p>
+
+				<p><span class="bold-text">Where it is:
+				</span> Gradients are seemingly everywhere in media and marketing. 
+				</div>
+			
+				<blockquote class="big-quotes">
 					<p>They are part of a suite of Facebook status backdrops introduced in 2017 and the branding for the New York Times’ popular podcast The Daily, which displays a yellow to blue gradient.</p>
 
 					<p><span class="emphasis-word">Gradients </span> have taken over Coachella’s app and website (if you watch carefully, the colors shift). Ally’s billboard in A Star Is Born is a full-on gradient, and so was the branding for the Oscars ceremony that recognized Lady Gaga.</p>
@@ -135,7 +137,7 @@
 				</section>
 			</article>
 		</div>
-		<button id="button"> <a href="article-2.html"> Next article </a></button>
+		<button id="button"> <a href="article-3.html"> Next article </a></button>
 
 		<footer>
 			<p id="citation">Originally published in T Magazine © Michael Rock</p>
