--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -36,8 +36,7 @@
 					<div class="article-info">
 						<div class="article-author">
 							<h3 id="written-by">Written by </h3>
-							<h3 id="author-name"><a href="https://www.nicolefenton.com/">
-								Nicole Fenton</a></h3>
+							<h3 id="author-name"><a href="https://www.nicolefenton.com/"> Nicole Fenton</a></h3>
 						</div>
 
 						<div class="original-text">
