fixed empty div

--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -19,7 +19,7 @@
 				<span class="short-text">02</span>
 				<span class="full-text" id="strike">Colors</span>
 				<span class="short-text">VM</span>
-				<span class="full-text">Designed by Vee Mai</span>
+				<span class="full-text">Vee Mai</span>
 			</div>
 	
 			<h1>Gradients</h1>
