--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -70,7 +70,8 @@
 				<section>
 					<div id="main-title">Hooked on a Feeling </div>
 
-					<div class="empty-sticky"></div>
+					<div class="
+					"></div>
 					<div class="sticky-header" id="section1">
 							<h2>Emotional > Functional </h2>
 					</div>
