working on styling for article 03 and homepage mobile

--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -123,18 +123,16 @@
 
 			<p>So I’ve been thinking about what communication looks like in the design process. Here’s my take:</p>
 
-			<ul>
-				<li>
-					<p>Self</p>
-					<p>Team</p>
-					<p>Product</p>
-					<p>Public</p>
-				</li>
-			</ul>
+			<div class="box-categories">
+				<div class="div1"><p class="four-categories">Self</p></div>
+				<div class="div2"><p class="four-categories">Team</p></div>
+				<div class="div3"><p class="four-categories">Team</p></div>
+				<div class="div4"><p class="four-categories">Public</p></div>
+			</div>
 
-			<p><strong>Self:</strong> We start by thinking alone. We may be collaborating with friends or colleagues, but we still need space to make sense of what we’re making. We have to put it into terms we can relate to.</p>
+			<p><span class="bold-text">Self: </span>We start by thinking alone. We may be collaborating with friends or colleagues, but we still need space to make sense of what we’re making. We have to put it into terms we can relate to.</p>
 
-			<p><strong>Team:</strong> We also have to talk through it with our team. That’s where extroverted thinking comes in. We may need to sketch, or brainstorm ideas, or summarize what we’ve heard from interviews or user research. We have to get on the same page or find a shared language. Once we have a sense of what we’re doing, we can express those goals as requirements, come up with an approach, and move forward. All of these messy conversations help us gather consensus and work through the details.</p>
+			<p><span class="bold-text">Team:</span>We also have to talk through it with our team. That’s where extroverted thinking comes in. We may need to sketch, or brainstorm ideas, or summarize what we’ve heard from interviews or user research. We have to get on the same page or find a shared language. Once we have a sense of what we’re doing, we can express those goals as requirements, come up with an approach, and move forward. All of these messy conversations help us gather consensus and work through the details.</p>
 
 			<p><strong>Product:</strong>  After choosing a design direction, we can prototype it, refine it, and try to make it speak for itself. The product needs to reflect the goals and intent we set out to achieve—and in some ways, it needs to stand on its own.</p>
 
