--- a/index.html
+++ b/index.html
@@ -12,21 +12,28 @@
 <!-- [Landing page]  --> 
 	<body>
 		<header>
-			<!-- nav bar -->
-			<div class="header">
-				<span class="class-name">T&I</span>
-				<span class="project">Article 01</span>
-				<span class="my-name">V.M</span>
+			<div class="header"></div>
+				<span class="short-text">T&I</span>
+				<span class="full-text">Typography & Interaction</span>
+				<span class="short-text">03</span>
+				<span class="full-text" id="strike">Project 03</span>
+				<span class="short-text">VM</span>
+				<span class="full-text">Vee Mai</span>
 			</div>
-
-			<!-- title -->
+	
 			<h1>Binding</h1>
-			<p class="intro"> This collection, created by Vee Mai, delves into the emotional resonance of design—exploring how feelings, color, and word choices shape user experiences in the digital product era. Through these articles, we uncover how gradients and carefully chosen words can provide meaningful and impactful interactions</p>
+
+			<div id="intro">
+				<h3>
+					This collection, curated by Vee Mai, explores the emotional depth of design—examining how feelings, colors, and words work together to shape powerful user experiences in the digital age. Through these articles, we uncover how intentional choices, from soothing gradients to thoughtfully crafted words, create designs that are both meaningful and impactful.
+				</h3>
+			</div>
 		</header>
 		
 		<main>
 		<section>
-			<h2>Explore these articles below! </h2>
+			<div id="sub-title">Explore all chapters below!</div>
+
 			<ol class="cardlink-container">
 	
 				<a href="Pages/article-1.html">
@@ -34,12 +41,12 @@
 						<div class="cardlink-item1">
 							<h2>01</h2>
 						</div>
-						<div class="cardlink-item2">
-							<h2>Hooked on a Feeling</h2>
+						<!-- <div class="cardlink-item2"> -->
+							<h4>Hooked on a Feeling</h4>
 						</div>
 						<div>
-							<h2 class="author">Michael Rock
-							</h2>
+							<h4 class="author">Michael Rock
+							</h4>
 						</div>
 					</li>
 				</a>
@@ -51,10 +58,10 @@
 							<h2>02</h2>
 						</div>
 						<div class="cardlink-item2">
-							<h2>Gradients</h2>
+							<h4>Gradients</h4>
 						</div>
 						<div>
-							<h2 class="author"> Daisy Alioto </h2>
+							<h4 class="author"> Daisy Alioto </h4>
 						</div>
 					</li>
 				</a>
@@ -65,10 +72,10 @@
 							<h2>03</h2>
 						</div>
 						<div class="cardlink-item2">
-							<h2>Words as Material</h2>
+							<h4>Words as Material</h4>
 						</div>
 						<div>
-							<h2>Nicole Fenton</h2>
+							<h4 class="author">Nicole Fenton</h4>
 						</div>
 					</li>
 				</a>
@@ -78,10 +85,24 @@
 		<section id="colophon">
 			<h3>Colophon</h3>
 			<p>
-				Lorem ipsem Lorem ipsem Lorem ipsem Lorem ipsem Lorem ipsemLorem ipsem Lorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsem
+				This “binding” book brings together three articles that explore the intersection of design, emotion, and communication:  
 			</p>
 			<p>
-				Lorem ipsem Lorem ipsem Lorem ipsem Lorem ipsem Lorem ipsemLorem ipsem Lorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsemLorem ipsem
+				Each chapter reflects a piece of the larger puzzle of thoughtful design.  
+
+			</p>
+			<p>
+				From *Hooked on a Feeling*, I’ve taken the idea that design isn’t just about function—it’s about intention. It’s about evoking emotions and crafting meaningful experiences, even in an age dominated by data. This article also emphasizes the importance of tools like mood boards, which can spark inspiration and help refine ideas during the creative process.  
+			</p>
+			<p>
+				The second chapter focuses on *Gradients* by Daisy Alioto. This article dives into why gradients have become so popular, explaining how certain aesthetics can offer psychological comfort. It’s a reminder that design often mirrors the emotions of the times. Moving forward, I’d like to experiment with soft gradients, using them thoughtfully to create designs that feel calm, soothing, and intentional.  
+			</p>
+			<p>
+				Finally, *Words as Materials* by Nicole Fenton rounds out the collection. With the visuals in place—the vibes, the colors—words come in to complete the story. Fenton treats words as tangible materials, breaking down how writing can be a design tool in its own right. She shows how thoughtful communication can elevate the design process, turning writing into a way to connect ideas and reach others.  
+			</p>
+
+			<p>
+			Together, these articles highlight a recurring theme: intention. Whether through visuals, colors, or words, great design starts with purpose. By embracing this, designers can create more meaningful work that not only communicates but also resonates.  
 			</p>
 		</section>
 		
